<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/progress"
        android:orderInCategory="100"
        android:title="@string/loading"
        android:visible="false"
        app:actionLayout="@layout/action_view_progress"
        app:showAsAction="always" />
    <item
        android:id="@+id/popular"
        android:orderInCategory="1"
        android:title="@string/popular_movies"
        app:showAsAction="never" />
    <item
        android:id="@+id/top_rated"
        android:orderInCategory="1"
        android:title="@string/top_rated_movies"
        app:showAsAction="never" />
    <item
        android:id="@+id/favorites"
        android:orderInCategory="1"
        android:title="@string/favorites"
        app:showAsAction="never" />
</menu>